# ReLiC

./: .gitignore  .readthedocs.yaml  README.md  demo_lcr.py  lcr_atm.py  lcr_core.py  lcr_exec.py  lcr_exec_mcmc.py  lcr_exec_ns.py  lcr_exec_nuts.py  lcr_fitwhite.py  lcr_injection_test.py  lcr_ns.py  lcr_nuts_priors.py  lcr_plots.py  lcr_test_injection.py  lcr_white.py  plot_corners.ipynb  plot_ts.ipynb  pyproject.toml  relic_atmosphere.py  relic_benchmark.py  relic_benchmark_dynesty.py  relic_benchmark_ns.py  relic_core.py  relic_exec.py  relic_exec_ns.py  relic_plots.py  relic_tslpf.py  relic_utils.py  relic_white.py  run.sh  simulate_lcmatrix.ipynb
config/: HD209458b-benchmark-pix.toml  HD209458b-benchmark-r100-gp.toml  HD209458b-benchmark-r100.toml  HD209458b-example.toml  HD209458b-hst-fc-tio.toml  HD209458b-hst-fc.toml  HD209458b-hst-noalkali.toml  HD209458b-joint-example.toml  HD209458b-joint-pix-tp6eqc.toml  HD209458b-joint-pix-tp6fastchem.toml  HD209458b-joint-pix-tp6fc.toml  HD209458b-joint-r100-tp6eqc.toml  HD209458b-joint-r100-tp6fastchem.toml  HD209458b-joint-r100-tp6fc.toml  HD209458b-jwst-example.toml  HD209458b-jwst-pix-tp6fastchem.toml  HD209458b-jwst-r100-gp-tp6eqc.toml  HD209458b-jwst-r100-tp6eqc.toml  HD209458b-jwst-r100-tp6fastchem.toml  HD209458b-tmp.toml  HD209458b.json  HD209458b_benchmark-pix.toml  HD209458b_benchmark-r100.toml  HD209458b_joint.json  HD209458b_joint.toml  HD209458b_joint.yaml  HD209458b_joint_flatmass.toml  HD209458b_mcmc.json  HD209458b_ns.json  HD209458b_pix.json  HD209458b_test.toml  WASP107b_mcmc.json  WASP107b_mcmc.toml  (+3 more)
(+32 files in other folders)
